--- a/src/AutoVersionsDB/AutoVersionsDB.Setup/Product.wxs
+++ b/src/AutoVersionsDB/AutoVersionsDB.Setup/Product.wxs
@@ -1,32 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-  
- <?if $(var.Platform) = x64 ?>
+
+  <?if $(var.Platform) = x64 ?>
   <?define ProductDisplayName = "Auto Versions DB (64 bit)" ?>
   <?define ProductId = "be0a5cff-5bd1-487e-a11d-6fff08c3fd2b" ?>
   <?define ProductUpgradeCode = "b2b59476-fa31-413a-8206-933d5ae32c2c" ?>
   <?define Win64 = "yes" ?>
   <?define PlatformProgramFilesFolder = "ProgramFiles64Folder" ?>
-<?else ?>
+  <?else ?>
   <?define ProductDisplayName = "Auto Versions DB (32 bit)" ?>
   <?define ProductId = "67371133-4b99-439e-a516-31d47aa1bf31" ?>
   <?define ProductUpgradeCode = "81adba65-8556-4d25-826f-060af580e7ba" ?>
   <?define Win64 = "no" ?>
   <?define PlatformProgramFilesFolder = "ProgramFilesFolder" ?>
-<?endif ?>
-  
-  
+  <?endif ?>
+
+
   <?define AutoVersionsDB.WinApp_PublishDir=..\AutoVersionsDB.WinApp\bin\publish\netcoreapp3.1\$(var.Configuration)\win-$(var.Platform)?>
-  
-  <Product Id="*" Name="$(var.ProductDisplayName)" Language="1033" 
-           Version="$(var.BuildVersion)" 
-           Manufacturer="Modi" 
+
+  <Product Id="*" Name="$(var.ProductDisplayName)" Language="1033"
+           Version="$(var.BuildVersion)"
+           Manufacturer="Modi W"
            UpgradeCode="$(var.ProductUpgradeCode)">
-    
+
+
     <Package InstallerVersion="200"
-             Compressed="yes" 
-             InstallScope="perMachine"
-    />
+             Compressed="yes"
+             InstallScope="perMachine"/>
+
+    <MediaTemplate EmbedCab="yes" />
+
+    <MajorUpgrade Schedule="afterInstallInitialize"
+              DowngradeErrorMessage="A later version of [ProductName] is already installed"
+              AllowSameVersionUpgrades="yes" />
+
 
     <Icon Id="AppIcon.ico" SourceFile="$(var.ProjectDir)\AppIcon.ico"/>
     <Property Id="ARPPRODUCTICON" Value="AppIcon.ico" />
@@ -37,12 +44,8 @@
     <UIRef Id="WixUI_Minimal"/>
     <WixVariable Id="WixUILicenseRtf" Value="$(var.ProjectDir)\License.rtf"/>
 
-    <MajorUpgrade Schedule="afterInstallInitialize"
-                  DowngradeErrorMessage="A later version of [ProductName] is already installed"
-                  AllowSameVersionUpgrades="yes" />
-    
-    <MediaTemplate EmbedCab="yes" />
-    
+
+
 
     <Feature Id="ProductFeature" Title="$(var.ProductDisplayName)" Level="1">
       <!--<ComponentGroupRef Id="ProductComponents" />-->
@@ -112,12 +115,12 @@
   <Fragment>
 
     <!--<ComponentGroup Id="ProductComponents" Directory="INSTALLFOLDER">-->
-      <!-- TODO: Remove the comments around this Component element and the ComponentRef below in order to add resources to this installer. -->
-      <!--<Component Win64="$(var.Win64)" Id="ProductComponent">
+    <!-- TODO: Remove the comments around this Component element and the ComponentRef below in order to add resources to this installer. -->
+    <!--<Component Win64="$(var.Win64)" Id="ProductComponent">
         <File Source="$(var.AutoVersionsDB.WinApp.TargetPath)" />
       </Component>-->
-     
-      <!--<Component Win64="$(var.Win64)" Id="AutoVersionsDB.WinApp.exe" Guid="e836466e-9c67-401c-9ea1-bf98fa390ea0">
+
+    <!--<Component Win64="$(var.Win64)" Id="AutoVersionsDB.WinApp.exe" Guid="e836466e-9c67-401c-9ea1-bf98fa390ea0">
         <File Id="AutoVersionsDB.WinApp.exe" 
               Name="AutoVersionsDB.WinApp.exe" 
               Source="$(var.AutoVersionsDB.WinApp_PublishDir)\AutoVersionsDB.WinApp.exe" />
