--- a/src/AutoVersionsDB/AutoVersionsDB.Setup/ComponentsGenerated.wxs
+++ b/src/AutoVersionsDB/AutoVersionsDB.Setup/ComponentsGenerated.wxs
@@ -2,75 +2,76 @@
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
     <Fragment>
         <DirectoryRef Id="INSTALLFOLDER">
-            <Component Id="cmp2BF30502C5FC3F6B419BEA23951F77CF" Guid="{C3A1EC4D-DD26-46D5-8A68-FC096D0ABD65}">
-                <File Id="fil7C92B4D1604106E42D61F42312480392" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.Common.dll" />
-            </Component>
-            <Component Id="cmp4B1CE1F145DE0A9E7FFF4FF9D6317A26" Guid="{25E70DA7-4761-41A0-A131-177B73851727}">
-                <File Id="filA3B52C3998F86B34FDD435DEAACCC604" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.Common.pdb" />
-            </Component>
-            <Component Id="cmp0DBF14FFC8B47321CC74C413886778BD" Guid="{A383207A-A29D-4DEE-B19E-7385FAEC2E5F}">
+            <Component Id="cmp0DBF14FFC8B47321CC74C413886778BD" Guid="{6500BB2A-C6AB-4C69-A0F0-4082053B8310}">
                 <File Id="fil8E4ECF04502D01B7538E0D12013B983E" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.Core.dll" />
             </Component>
-            <Component Id="cmpEE95F5B786CA41135F018CEC840468A0" Guid="{ABB4DD5C-8A9B-4BFA-BCFA-C85DE9B4AC5D}">
+            <Component Id="cmpEE95F5B786CA41135F018CEC840468A0" Guid="{B9F6A87C-A518-4F80-B102-260A1E3AF64C}">
                 <File Id="filC2C3CC0188FC566BEC8725647899619F" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.Core.pdb" />
             </Component>
-            <Component Id="cmpA26566E2DB35DAA82D36ABF3B990FE8B" Guid="{0CD19B07-1B6F-4ED2-8126-AA0BA0CF97B4}">
+            <Component Id="cmpA26566E2DB35DAA82D36ABF3B990FE8B" Guid="{448B5A73-C4B7-4EC4-B599-8CBD65CA45DC}">
                 <File Id="filB0F7326AEAD217FE59AF32B1BA5FD3EB" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.DbCommands.Contract.dll" />
             </Component>
-            <Component Id="cmp1D7D110B3913E1DD996591B32AED60AE" Guid="{F4366E9A-5779-432F-8658-724BE1A21DD1}">
+            <Component Id="cmp1D7D110B3913E1DD996591B32AED60AE" Guid="{05B229A9-1DE0-40B2-B042-1B9397C058C7}">
                 <File Id="filBADB6CD34782647F5651F6207F98D352" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.DbCommands.Contract.pdb" />
             </Component>
-            <Component Id="cmpE69EE762861953DEE67F435D8FEFFC6C" Guid="{BBAC8489-26EE-4F18-8B4A-8DB0D4022C59}">
+            <Component Id="cmpE69EE762861953DEE67F435D8FEFFC6C" Guid="{7830F524-1790-48DA-8FEE-645E6F3A98AF}">
                 <File Id="fil678B3819B97344810FAE42737E36DB9B" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.DbCommands.Integration.dll" />
             </Component>
-            <Component Id="cmpB26E96EDC26183694AC95C4C0F936EAE" Guid="{A820425D-776F-4127-9162-3FCA7F11F20A}">
+            <Component Id="cmpB26E96EDC26183694AC95C4C0F936EAE" Guid="{F158BF7F-C755-4A69-A85A-EE392BB280F0}">
                 <File Id="fil76CA21E311E137DB8462DD70EBD02A81" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.DbCommands.Integration.pdb" />
             </Component>
-            <Component Id="cmpA843A30A2E841F57AAE52B96A734380C" Guid="{78F9C613-1D64-4E9A-94C1-094421EF58DA}">
+            <Component Id="cmpA843A30A2E841F57AAE52B96A734380C" Guid="{BCE38B60-778A-484A-859D-F9E1751F89DB}">
                 <File Id="fil813CF0D00BAB4D07B482A3D92AC8F89E" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.DbCommands.SqlServer.dll" />
             </Component>
-            <Component Id="cmpBFE22E2C7A624C10855CC7B7CC650DD5" Guid="{762009F5-8147-468B-936F-FA648DF11367}">
+            <Component Id="cmpBFE22E2C7A624C10855CC7B7CC650DD5" Guid="{D49BEE19-014E-486E-83EB-7F9CC634D678}">
                 <File Id="fil8A30E83CDC159585B7BE658F1DE2C9E6" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.DbCommands.SqlServer.pdb" />
             </Component>
-            <Component Id="cmp0366AE6AA0313310954A43E2B8DE1C36" Guid="{A4EF2C96-D83D-4ED2-BEB7-3F90AEA05DA5}">
+            <Component Id="cmpBCD1F915D5FFD103625CC00B69CE7F27" Guid="{D91D0B68-28E2-4DA2-8482-E29DFCF69267}">
+                <File Id="fil0AFA55FCE2B7EB38E0E5FB5E2EAE6C48" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.Helpers.dll" />
+            </Component>
+            <Component Id="cmpB83ECDF336E531E3B3AC23A447900720" Guid="{D95B9EC1-D914-40F4-95C1-280329467A40}">
+                <File Id="fil6B116A0FB5B1CE50286B378899190B19" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.Helpers.pdb" />
+            </Component>
+            <Component Id="cmp0366AE6AA0313310954A43E2B8DE1C36" Guid="{AA89D0CA-784E-442D-A200-A7B09292A9B5}">
                 <File Id="filFF1EC05DA7E3DA3C027C8C115C341E15" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.NotificationableEngine.dll" />
             </Component>
-            <Component Id="cmpBFF09DA7FD4A2DAAF7701DC9BB88A6A2" Guid="{93CF432D-C562-4E5C-8798-48455BC35106}">
+            <Component Id="cmpBFF09DA7FD4A2DAAF7701DC9BB88A6A2" Guid="{AE36245B-C39B-4553-B66F-DB5E9D391E46}">
                 <File Id="filF64FB3313410043A4CB7B9935EE06C1F" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.NotificationableEngine.pdb" />
             </Component>
-            <Component Id="cmpA348D3C0FD3DD30BC246D9BC179680B0" Guid="{EA6FE1FE-3E77-4010-B9E7-0FB6082169F5}">
+            <Component Id="cmpA348D3C0FD3DD30BC246D9BC179680B0" Guid="{25DFBA00-4504-4467-84AE-2AAC43DCAC72}">
                 <File Id="fil87E33F65F5F12B859C239683B77A87AC" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.WinApp.deps.json" />
             </Component>
-            <Component Id="cmp257A19B0980540F122E5FFDB6C2FB2AC" Guid="{83FFA76B-0385-4A2E-9EA3-9965FE3955A6}">
+            <Component Id="cmp257A19B0980540F122E5FFDB6C2FB2AC" Guid="{9F3EE31C-E37A-4A34-88EF-B6B99A27CFC9}">
                 <File Id="fil0882F295BEE801F84BA4219A8017633A" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.WinApp.dll" />
             </Component>
-            <Component Id="cmpF7E90042B29BE4EB501C5BADFE974139" Guid="{83CD8C6C-C249-4A70-B3EC-72555B330E60}">
+            <Component Id="cmpF7E90042B29BE4EB501C5BADFE974139" Guid="{FB0D1FB8-63D3-44CF-A000-52060ED24EB2}">
                 <File Id="fil14A16DE4871020374555E8E6A3BB7F42" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.WinApp.exe" />
             </Component>
-            <Component Id="cmp511008A99417D70CA71C649E39557E1A" Guid="{D819FBCA-EA1C-4B85-B05E-07620FF73D50}">
+            <Component Id="cmp511008A99417D70CA71C649E39557E1A" Guid="{4D4CB7E9-26C5-4CD0-8682-F7BFC2C7AF8C}">
                 <File Id="fil26A03CF9922F68ED7DDE8FC27E175B7C" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.WinApp.pdb" />
             </Component>
-            <Component Id="cmp134483DC9CACE8FC45BC0C65DD776E48" Guid="{263C1F0B-AB96-4F48-890C-5DB8D9811F34}">
+            <Component Id="cmp134483DC9CACE8FC45BC0C65DD776E48" Guid="{14743ACF-E7AD-44E7-BB4D-A8420BD87FAB}">
                 <File Id="fil5BA6CAC816501273099AF68C0951D5B2" KeyPath="yes" Source="$(var.BasePath)\AutoVersionsDB.WinApp.runtimeconfig.json" />
             </Component>
-            <Component Id="cmpBC4FC00A26E7D32479D42D3411317FC5" Guid="{FFB81550-3690-4197-A6F0-85CE35756AAB}">
+            <Component Id="cmpBC4FC00A26E7D32479D42D3411317FC5" Guid="{AE4C49D1-C16F-4B55-8E3B-5BCF14B80F38}">
                 <File Id="fil90A8AAD9FC612906D405476D61CEA3F4" KeyPath="yes" Source="$(var.BasePath)\Newtonsoft.Json.dll" />
             </Component>
-            <Component Id="cmpDA60982F820038280380BE207B6E738E" Guid="{0A46BF1F-4559-4E00-A462-62F1C09F290C}">
+            <Component Id="cmpDA60982F820038280380BE207B6E738E" Guid="{7B03DB88-30CF-4462-8888-09C98D241FAF}">
                 <File Id="filFB25B5D44CA54D4D876DD0B5BC0DA0E0" KeyPath="yes" Source="$(var.BasePath)\Ninject.dll" />
             </Component>
-            <Component Id="cmpE78757BD03463E74652C32CEEAB79A64" Guid="{D72F58DF-93A4-4616-A59F-B8FB7A98F6F4}">
+            <Component Id="cmpE78757BD03463E74652C32CEEAB79A64" Guid="{39CB2161-B7FD-4414-B494-777191714849}">
                 <File Id="fil3D4C95920C2AC75503C11D9296D4B8BB" KeyPath="yes" Source="$(var.BasePath)\sni.dll" />
             </Component>
-            <Component Id="cmp7FFA1CFB45EDA1442E42E34E1F3DB27E" Guid="{17D43830-ED61-4710-865D-AA6FAE1CD249}">
+            <Component Id="cmp3B9C9B9385920A10BBA478F4EB3B7ACD" Guid="{7CEEFDAA-C3FB-4837-933B-B8DA89E6B776}">
+                <File Id="fil88E781372CFBEE069440964A1F323BF4" KeyPath="yes" Source="$(var.BasePath)\System.CommandLine.dll" />
+            </Component>
+            <Component Id="cmp7FFA1CFB45EDA1442E42E34E1F3DB27E" Guid="{A4016273-BCDB-456B-BCD5-6906F4F45DC0}">
                 <File Id="filEF4B8F9C45AD18CA9F559E7A542D0C98" KeyPath="yes" Source="$(var.BasePath)\System.Data.SqlClient.dll" />
             </Component>
         </DirectoryRef>
     </Fragment>
     <Fragment>
         <ComponentGroup Id="PublishedComponents">
-            <ComponentRef Id="cmp2BF30502C5FC3F6B419BEA23951F77CF" />
-            <ComponentRef Id="cmp4B1CE1F145DE0A9E7FFF4FF9D6317A26" />
             <ComponentRef Id="cmp0DBF14FFC8B47321CC74C413886778BD" />
             <ComponentRef Id="cmpEE95F5B786CA41135F018CEC840468A0" />
             <ComponentRef Id="cmpA26566E2DB35DAA82D36ABF3B990FE8B" />
@@ -79,6 +80,8 @@
             <ComponentRef Id="cmpB26E96EDC26183694AC95C4C0F936EAE" />
             <ComponentRef Id="cmpA843A30A2E841F57AAE52B96A734380C" />
             <ComponentRef Id="cmpBFE22E2C7A624C10855CC7B7CC650DD5" />
+            <ComponentRef Id="cmpBCD1F915D5FFD103625CC00B69CE7F27" />
+            <ComponentRef Id="cmpB83ECDF336E531E3B3AC23A447900720" />
             <ComponentRef Id="cmp0366AE6AA0313310954A43E2B8DE1C36" />
             <ComponentRef Id="cmpBFF09DA7FD4A2DAAF7701DC9BB88A6A2" />
             <ComponentRef Id="cmpA348D3C0FD3DD30BC246D9BC179680B0" />
@@ -89,6 +92,7 @@
             <ComponentRef Id="cmpBC4FC00A26E7D32479D42D3411317FC5" />
             <ComponentRef Id="cmpDA60982F820038280380BE207B6E738E" />
             <ComponentRef Id="cmpE78757BD03463E74652C32CEEAB79A64" />
+            <ComponentRef Id="cmp3B9C9B9385920A10BBA478F4EB3B7ACD" />
             <ComponentRef Id="cmp7FFA1CFB45EDA1442E42E34E1F3DB27E" />
         </ComponentGroup>
     </Fragment>
