--- a/src/AutoVersionsDB/AutoVersionsDB.ConsoleApp.Setup/Product.wxs
+++ b/src/AutoVersionsDB/AutoVersionsDB.ConsoleApp.Setup/Product.wxs
@@ -1,30 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-	<Product Id="*" Name="AutoVersionsDB.ConsoleApp.Setup" Language="1033" Version="1.0.0.0" Manufacturer="" UpgradeCode="a791162a-f879-467c-a94b-3bc7017e3ddf">
-		<Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" />
 
-		<MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
-		<MediaTemplate />
+  <?if $(var.Platform) = x64 ?>
+  <?define ProductDisplayName = "Auto Versions DB Console (64 bit)" ?>
+  <?define ProductId = "e85a25ea-de27-4c88-a776-94a17d7dd5d1" ?>
+  <?define ProductUpgradeCode = "940f44ee-73cb-4e27-b55c-350c52bad7c7" ?>
+  <?define Win64 = "yes" ?>
+  <?define PlatformProgramFilesFolder = "ProgramFiles64Folder" ?>
+  <?else ?>
+  <?define ProductDisplayName = "Auto Versions DB Console (32 bit)" ?>
+  <?define ProductId = "6518f9c8-3fee-4faa-a8ea-ff27c7fda17f" ?>
+  <?define ProductUpgradeCode = "86b4be4c-d875-47a4-a38e-f7df9ebdc7fb" ?>
+  <?define Win64 = "no" ?>
+  <?define PlatformProgramFilesFolder = "ProgramFilesFolder" ?>
+  <?endif ?>
 
-		<Feature Id="ProductFeature" Title="AutoVersionsDB.ConsoleApp.Setup" Level="1">
-			<ComponentGroupRef Id="ProductComponents" />
-		</Feature>
-	</Product>
 
-	<Fragment>
-		<Directory Id="TARGETDIR" Name="SourceDir">
-			<Directory Id="ProgramFilesFolder">
-				<Directory Id="INSTALLFOLDER" Name="AutoVersionsDB.ConsoleApp.Setup" />
-			</Directory>
-		</Directory>
-	</Fragment>
+  <Product Id="*" Name="$(var.ProductDisplayName)" Language="1033"
+           Version="$(var.BuildVersion)"
+           Manufacturer="Modi W"
+           UpgradeCode="$(var.ProductUpgradeCode)">
 
-	<Fragment>
-		<ComponentGroup Id="ProductComponents" Directory="INSTALLFOLDER">
-			<!-- TODO: Remove the comments around this Component element and the ComponentRef below in order to add resources to this installer. -->
-			<!-- <Component Id="ProductComponent"> -->
-				<!-- TODO: Insert files, registry keys, and other resources here. -->
-			<!-- </Component> -->
-		</ComponentGroup>
-	</Fragment>
+    <Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" />
+
+    <MediaTemplate EmbedCab="yes" />
+
+    <MajorUpgrade Schedule="afterInstallInitialize"
+                  DowngradeErrorMessage="A later version of [ProductName] is already installed"
+                  AllowSameVersionUpgrades="yes" />
+
+
+    <Icon Id="AppIcon.ico" SourceFile="$(var.ProjectDir)\AppIcon.ico"/>
+    <Property Id="ARPPRODUCTICON" Value="AppIcon.ico" />
+
+    <Property Id="ARPURLINFOABOUT" Value="https://github.com/modi-w/AutoVersionsDB" />
+
+    <UIRef Id="WixUI_Minimal"/>
+    <WixVariable Id="WixUILicenseRtf" Value="$(var.ProjectDir)\License.rtf"/>
+
+
+    <Feature Id="ProductFeature" Title="$(var.ProductDisplayName)" Level="1">
+      <!--<ComponentGroupRef Id="ProductComponents" />-->
+      <ComponentGroupRef Id="PublishedComponents" />
+      <ComponentRef Id="ApplicationShortcut" />
+      <ComponentRef Id="ApplicationShortcutDesktop" />
+    </Feature>
+  </Product>
+
+
+  <Fragment>
+    <Directory Id="TARGETDIR" Name="SourceDir">
+      <Directory Id="$(var.PlatformProgramFilesFolder)">
+        <Directory Id="INSTALLFOLDER" Name="$(var.ProductDisplayName)" />
+      </Directory>
+      <Directory Id="ProgramMenuFolder">
+        <Directory Id="ApplicationProgramsFolder" Name="$(var.ProductDisplayName)" />
+      </Directory>
+      <Directory Id="DesktopFolder" Name="Desktop" />
+    </Directory>
+  </Fragment>
+
+
+  <Fragment>
+    <DirectoryRef Id="ApplicationProgramsFolder">
+      <Component Win64="$(var.Win64)" Id="ApplicationShortcut"  Guid="e0add204-9e78-40eb-8413-4226e590903e">
+        <Shortcut Id="ApplicationStartMenuShortcut"
+            Name="$(var.ProductDisplayName)"
+            Description="$(var.ProductDisplayName)"
+            Target="[INSTALLFOLDER]\AutoVersionsDB.ConsoleApp.exe"
+            WorkingDirectory="INSTALLFOLDER"/>
+        <RemoveFolder Id="RemoveApplicationProgramsFolder" Directory="ApplicationProgramsFolder" On="uninstall"/>
+        <RegistryValue Root="HKCU" Key="Software\AutoVersionsDBConsole" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
+      </Component>
+    </DirectoryRef>
+
+    <DirectoryRef Id="DesktopFolder">
+      <Component Win64="$(var.Win64)" Id="ApplicationShortcutDesktop" Guid="b6f45e2b-ad38-492f-ab9d-7da6698e3958">
+        <Shortcut Id="ApplicationDesktopShortcut"
+            Name="$(var.ProductDisplayName)"
+            Description="$(var.ProductDisplayName)"
+            Target="[INSTALLFOLDER]\AutoVersionsDB.ConsoleApp.exe"
+            WorkingDirectory="INSTALLFOLDER"/>
+        <RemoveFolder Id="RemoveDesktopFolder" Directory="DesktopFolder" On="uninstall"/>
+        <RegistryValue Root="HKCU" Key="Software\AutoVersionsDBConsole" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
+      </Component>
+    </DirectoryRef>
+
+  </Fragment>
+  
 </Wix>
