--- a/src/AutoVersionsDB/AutoVersionsDB.ConsoleApp.Setup/Product.wxs
+++ b/src/AutoVersionsDB/AutoVersionsDB.ConsoleApp.Setup/Product.wxs
@@ -42,8 +42,9 @@
     <Feature Id="ProductFeature" Title="$(var.ProductDisplayName)" Level="1">
       <!--<ComponentGroupRef Id="ProductComponents" />-->
       <ComponentGroupRef Id="PublishedComponents" />
-      <ComponentRef Id="ApplicationShortcut" />
-      <ComponentRef Id="ApplicationShortcutDesktop" />
+      <!--<ComponentRef Id="ApplicationShortcut" />
+      <ComponentRef Id="ApplicationShortcutDesktop" />-->
+      <ComponentRef Id="Path" />
     </Feature>
   </Product>
 
@@ -53,21 +54,27 @@
       <Directory Id="$(var.PlatformProgramFilesFolder)">
         <Directory Id="INSTALLFOLDER" Name="$(var.ProductDisplayName)" />
       </Directory>
-      <Directory Id="ProgramMenuFolder">
+      <!--<Directory Id="ProgramMenuFolder">
         <Directory Id="ApplicationProgramsFolder" Name="$(var.ProductDisplayName)" />
       </Directory>
-      <Directory Id="DesktopFolder" Name="Desktop" />
+      <Directory Id="DesktopFolder" Name="Desktop" />-->
+
+      <Component Id="Path" Guid="{40f6d99a-4fb8-4420-99d3-f383cd8f9793}">
+        <Environment Id="PATH" Name="PATH" Value="[INSTALLFOLDER]" Permanent="no" Part="last" Action="set" System="yes" />
+      </Component>
     </Directory>
   </Fragment>
 
 
-  <Fragment>
+<!-- Comment: We Dont need desktop shortcut and start menu shortcut for console app -->
+  
+  <!--<Fragment>
     <DirectoryRef Id="ApplicationProgramsFolder">
       <Component Win64="$(var.Win64)" Id="ApplicationShortcut"  Guid="e0add204-9e78-40eb-8413-4226e590903e">
         <Shortcut Id="ApplicationStartMenuShortcut"
             Name="$(var.ProductDisplayName)"
             Description="$(var.ProductDisplayName)"
-            Target="[INSTALLFOLDER]\AutoVersionsDB.ConsoleApp.exe"
+            Target="[INSTALLFOLDER]\avdb.exe"
             WorkingDirectory="INSTALLFOLDER"/>
         <RemoveFolder Id="RemoveApplicationProgramsFolder" Directory="ApplicationProgramsFolder" On="uninstall"/>
         <RegistryValue Root="HKCU" Key="Software\AutoVersionsDBConsole" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
@@ -79,13 +86,13 @@
         <Shortcut Id="ApplicationDesktopShortcut"
             Name="$(var.ProductDisplayName)"
             Description="$(var.ProductDisplayName)"
-            Target="[INSTALLFOLDER]\AutoVersionsDB.ConsoleApp.exe"
+            Target="[INSTALLFOLDER]\avdb.exe"
             WorkingDirectory="INSTALLFOLDER"/>
         <RemoveFolder Id="RemoveDesktopFolder" Directory="DesktopFolder" On="uninstall"/>
         <RegistryValue Root="HKCU" Key="Software\AutoVersionsDBConsole" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
       </Component>
     </DirectoryRef>
 
-  </Fragment>
-  
+  </Fragment>-->
+
 </Wix>
