--- a/src/AutoVersionsDB/AutoVersionsDB.ConsoleApp.Setup/Product.wxs
+++ b/src/AutoVersionsDB/AutoVersionsDB.ConsoleApp.Setup/Product.wxs
@@ -38,6 +38,9 @@
     <UIRef Id="WixUI_Minimal"/>
     <WixVariable Id="WixUILicenseRtf" Value="$(var.ProjectDir)\License.rtf"/>
 
+    <WixVariable Id="WixUIBannerBmp" Value="$(var.ProjectDir)\topBanner.bmp" />
+    <WixVariable Id="WixUIDialogBmp" Value="$(var.ProjectDir)\bgBanner.bmp" />
+    <WixVariable Id="WixUIInfoIco" Value="$(var.ProjectDir)\AppIcon.ico" />
 
     <Feature Id="ProductFeature" Title="$(var.ProductDisplayName)" Level="1">
       <!--<ComponentGroupRef Id="ProductComponents" />-->
