--- a/src/AutoVersionsDB/AutoVersionsDB.Setup/Product.wxs
+++ b/src/AutoVersionsDB/AutoVersionsDB.Setup/Product.wxs
@@ -47,6 +47,8 @@
     <WixVariable Id="WixUIBannerBmp" Value="$(var.ProjectDir)\topBanner.bmp" />
     <WixVariable Id="WixUIDialogBmp" Value="$(var.ProjectDir)\bgBanner.bmp" />
     <WixVariable Id="WixUIInfoIco" Value="$(var.ProjectDir)\AppIcon.ico" />
+    <WixVariable Id="WixUINewIco" Value="$(var.ProjectDir)\AppIcon.ico" />
+    <WixVariable Id="WixUIUpIco" Value="$(var.ProjectDir)\AppIcon.ico" />
 
 
 
