--- a/src/AutoVersionsDB/AutoVersionsDB.ConsoleApp.Setup/Product.wxs
+++ b/src/AutoVersionsDB/AutoVersionsDB.ConsoleApp.Setup/Product.wxs
@@ -18,7 +18,7 @@
 
   <Product Id="*" Name="$(var.ProductDisplayName)" Language="1033"
            Version="$(var.BuildVersion)"
-           Manufacturer="Modi W"
+           Manufacturer="Modi Weintroub"
            UpgradeCode="$(var.ProductUpgradeCode)">
 
     <Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" />
