--- a/src/AutoVersionsDB/AutoVersionsDB.Setup/Product.wxs
+++ b/src/AutoVersionsDB/AutoVersionsDB.Setup/Product.wxs
@@ -20,7 +20,7 @@
 
   <Product Id="*" Name="$(var.ProductDisplayName)" Language="1033"
            Version="$(var.BuildVersion)"
-           Manufacturer="Modi W"
+           Manufacturer="Modi Weintroub"
            UpgradeCode="$(var.ProductUpgradeCode)">
 
 
